CREATE TABLE local_users (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  username varchar(96) NOT NULL,
  email varchar(320) NOT NULL,
  password_hash varchar(512) NOT NULL,
  display_name varchar(255),
  specialty varchar(255),
  license_number varchar(128),
  enabled boolean NOT NULL DEFAULT true,
  last_login_at timestamptz,
  created_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  updated_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  CONSTRAINT uq_local_users_username UNIQUE (username),
  CONSTRAINT uq_local_users_email UNIQUE (email)
);

CREATE TABLE local_permissions (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  permission_key varchar(128) NOT NULL UNIQUE,
  display_name varchar(255) NOT NULL,
  description varchar(1000),
  created_at timestamptz NOT NULL DEFAULT clock_timestamp()
);

CREATE TABLE local_roles (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  role_key varchar(96) NOT NULL UNIQUE,
  display_name varchar(255) NOT NULL,
  description varchar(1000),
  system_role boolean NOT NULL DEFAULT false,
  enabled boolean NOT NULL DEFAULT true,
  created_by bigint REFERENCES local_users(id) ON DELETE SET NULL,
  updated_by bigint REFERENCES local_users(id) ON DELETE SET NULL,
  created_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  updated_at timestamptz NOT NULL DEFAULT clock_timestamp()
);

CREATE TABLE local_role_permissions (
  role_id bigint NOT NULL REFERENCES local_roles(id) ON DELETE CASCADE,
  permission_id bigint NOT NULL REFERENCES local_permissions(id) ON DELETE CASCADE,
  created_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  PRIMARY KEY (role_id, permission_id)
);

CREATE TABLE local_user_roles (
  user_id bigint NOT NULL REFERENCES local_users(id) ON DELETE CASCADE,
  role_id bigint NOT NULL REFERENCES local_roles(id) ON DELETE CASCADE,
  assigned_by bigint REFERENCES local_users(id) ON DELETE SET NULL,
  assigned_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  PRIMARY KEY (user_id, role_id)
);

CREATE TABLE patients (
  source_id bigint PRIMARY KEY,
  source_updated_at timestamptz,
  document_number varchar(64),
  medical_record_number varchar(128),
  first_name varchar(255),
  last_name varchar(255),
  birth_date date,
  sex varchar(64),
  health_insurance varchar(500),
  health_insurance_number varchar(255),
  phone varchar(255),
  email varchar(320),
  address varchar(1000),
  identity_json jsonb NOT NULL DEFAULT '{}'::jsonb,
  local_only boolean NOT NULL DEFAULT false,
  created_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  updated_at timestamptz NOT NULL DEFAULT clock_timestamp()
);
CREATE UNIQUE INDEX uq_patients_document_number
  ON patients (lower(document_number)) WHERE document_number IS NOT NULL AND btrim(document_number) <> '';
CREATE UNIQUE INDEX uq_patients_medical_record_number
  ON patients (lower(medical_record_number)) WHERE medical_record_number IS NOT NULL AND btrim(medical_record_number) <> '';
CREATE INDEX idx_patients_search ON patients (lower(last_name), lower(first_name), document_number);

CREATE SEQUENCE local_patient_id_sequence START WITH 8000000000000000;

CREATE TABLE local_sessions (
  token_hash char(64) PRIMARY KEY,
  user_id bigint NOT NULL REFERENCES local_users(id) ON DELETE CASCADE,
  active_patient_id bigint REFERENCES patients(source_id) ON DELETE SET NULL,
  expires_at timestamptz NOT NULL,
  created_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  last_seen_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  client_address inet,
  user_agent varchar(1000)
);
CREATE INDEX idx_local_sessions_expiry ON local_sessions (expires_at);
CREATE INDEX idx_local_sessions_user ON local_sessions (user_id, expires_at);

CREATE TABLE local_security_settings (
  id smallint PRIMARY KEY DEFAULT 1 CHECK (id = 1),
  login_required boolean NOT NULL DEFAULT true,
  auto_user_id bigint REFERENCES local_users(id) ON DELETE SET NULL,
  session_duration_minutes integer NOT NULL DEFAULT 43200
    CHECK (session_duration_minutes BETWEEN 15 AND 525600),
  revision bigint NOT NULL DEFAULT 1 CHECK (revision > 0),
  updated_by bigint REFERENCES local_users(id) ON DELETE SET NULL,
  created_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  updated_at timestamptz NOT NULL DEFAULT clock_timestamp()
);

CREATE TABLE hcop_patient_documents (
  patient_id bigint PRIMARY KEY REFERENCES patients(source_id) ON DELETE CASCADE,
  document_json jsonb NOT NULL,
  revision bigint NOT NULL DEFAULT 1 CHECK (revision > 0),
  imported_at timestamptz,
  created_by bigint NOT NULL REFERENCES local_users(id),
  updated_by bigint NOT NULL REFERENCES local_users(id),
  created_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  updated_at timestamptz NOT NULL DEFAULT clock_timestamp()
);

CREATE TABLE patient_records (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  patient_id bigint NOT NULL REFERENCES patients(source_id) ON DELETE CASCADE,
  category varchar(64) NOT NULL,
  source_record_id varchar(255) NOT NULL,
  source_ordinal integer NOT NULL DEFAULT 0 CHECK (source_ordinal >= 0),
  payload jsonb NOT NULL,
  payload_sha256 char(64) NOT NULL,
  created_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  updated_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  CONSTRAINT uq_patient_record UNIQUE (patient_id, category, source_record_id)
);
CREATE INDEX idx_patient_records_category ON patient_records (patient_id, category, source_ordinal);

CREATE TABLE reference_records (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  category varchar(64) NOT NULL,
  source_record_id varchar(255) NOT NULL,
  source_ordinal integer NOT NULL DEFAULT 0 CHECK (source_ordinal >= 0),
  payload jsonb NOT NULL,
  payload_sha256 char(64) NOT NULL,
  created_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  updated_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  CONSTRAINT uq_reference_record UNIQUE (category, source_record_id)
);

CREATE TABLE local_patient_record_overlays (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  patient_id bigint NOT NULL REFERENCES patients(source_id) ON DELETE CASCADE,
  category varchar(64) NOT NULL,
  record_id varchar(255) NOT NULL,
  operation varchar(16) NOT NULL CHECK (operation IN ('upsert', 'delete')),
  source_ordinal integer NOT NULL DEFAULT 0 CHECK (source_ordinal >= 0),
  payload jsonb,
  payload_sha256 char(64),
  created_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  updated_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  CONSTRAINT uq_local_patient_record UNIQUE (patient_id, category, record_id),
  CONSTRAINT chk_local_patient_record_payload CHECK (
    (operation = 'delete' AND payload IS NULL AND payload_sha256 IS NULL) OR
    (operation = 'upsert' AND payload IS NOT NULL AND payload_sha256 IS NOT NULL)
  )
);

CREATE TABLE local_reference_record_overlays (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  category varchar(64) NOT NULL,
  record_id varchar(255) NOT NULL,
  operation varchar(16) NOT NULL CHECK (operation IN ('upsert', 'delete')),
  source_ordinal integer NOT NULL DEFAULT 0 CHECK (source_ordinal >= 0),
  payload jsonb,
  payload_sha256 char(64),
  created_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  updated_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  CONSTRAINT uq_local_reference_record UNIQUE (category, record_id)
);

CREATE TABLE clinical_treatments (
  id varchar(255) PRIMARY KEY,
  patient_id bigint NOT NULL REFERENCES patients(source_id) ON DELETE RESTRICT,
  diagnosis_id varchar(255),
  created_on date NOT NULL,
  first_cycle_date date,
  initial_cycle smallint NOT NULL DEFAULT 1 CHECK (initial_cycle BETWEEN 1 AND 500),
  cycle_count smallint NOT NULL DEFAULT 1 CHECK (cycle_count BETWEEN 1 AND 500),
  cycle_days smallint CHECK (cycle_days BETWEEN 0 AND 3650),
  treatment_type varchar(255),
  intent varchar(255),
  diagnosis varchar(2000),
  scheme_id varchar(255),
  scheme_name varchar(1000) NOT NULL,
  oncologist varchar(500),
  treatment_status varchar(96) NOT NULL DEFAULT 'Registrado',
  consent_status varchar(96),
  consent_available boolean NOT NULL DEFAULT false,
  estimated_duration_minutes smallint CHECK (estimated_duration_minutes BETWEEN 1 AND 1440),
  payload jsonb NOT NULL DEFAULT '{}'::jsonb,
  revision bigint NOT NULL DEFAULT 1 CHECK (revision > 0),
  created_by bigint NOT NULL REFERENCES local_users(id),
  updated_by bigint NOT NULL REFERENCES local_users(id),
  created_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  updated_at timestamptz NOT NULL DEFAULT clock_timestamp()
);
CREATE INDEX idx_clinical_treatments_patient ON clinical_treatments (patient_id, created_on DESC);

CREATE TABLE treatment_details (
  treatment_id varchar(255) PRIMARY KEY REFERENCES clinical_treatments(id) ON DELETE CASCADE,
  detail_json jsonb NOT NULL DEFAULT '{}'::jsonb,
  revision bigint NOT NULL DEFAULT 1 CHECK (revision > 0),
  updated_by bigint NOT NULL REFERENCES local_users(id),
  updated_at timestamptz NOT NULL DEFAULT clock_timestamp()
);

CREATE TABLE unified_infusion_sessions (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  patient_id bigint NOT NULL REFERENCES patients(source_id) ON DELETE RESTRICT,
  treatment_id varchar(255) NOT NULL REFERENCES clinical_treatments(id) ON DELETE RESTRICT,
  cycle_number smallint NOT NULL CHECK (cycle_number BETWEEN 1 AND 500),
  application_id bigint,
  scheduled_at timestamptz,
  chair varchar(128),
  duration_minutes smallint CHECK (duration_minutes BETWEEN 1 AND 1440),
  clinical_status varchar(32) NOT NULL DEFAULT 'planned'
    CHECK (clinical_status IN ('planned','checked_in','ready','in_progress','observation','paused','completed','cancelled')),
  pharmacy_status varchar(32) NOT NULL DEFAULT 'pending'
    CHECK (pharmacy_status IN ('not_required','pending','in_preparation','ready','released','cancelled')),
  administration_status varchar(32) NOT NULL DEFAULT 'not_started'
    CHECK (administration_status IN ('not_started','in_progress','completed','withheld','cancelled')),
  appointment_confirmed boolean NOT NULL DEFAULT false,
  notes text,
  source_ref jsonb NOT NULL DEFAULT '{}'::jsonb,
  revision bigint NOT NULL DEFAULT 1 CHECK (revision > 0),
  created_by bigint NOT NULL REFERENCES local_users(id),
  updated_by bigint NOT NULL REFERENCES local_users(id),
  created_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  updated_at timestamptz NOT NULL DEFAULT clock_timestamp()
);
CREATE INDEX idx_unified_infusion_schedule ON unified_infusion_sessions (scheduled_at, clinical_status);
CREATE INDEX idx_unified_infusion_patient ON unified_infusion_sessions (patient_id, updated_at DESC);
CREATE INDEX idx_unified_infusion_treatment ON unified_infusion_sessions (treatment_id, cycle_number);
CREATE UNIQUE INDEX uq_unified_infusion_active_slot
  ON unified_infusion_sessions (patient_id, treatment_id, cycle_number, scheduled_at)
  WHERE clinical_status <> 'cancelled';

CREATE TABLE unified_infusion_medications (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  infusion_session_id bigint NOT NULL REFERENCES unified_infusion_sessions(id) ON DELETE CASCADE,
  source_item_ref varchar(255),
  drug_id varchar(255),
  drug_name varchar(500) NOT NULL,
  prescribed_dose_text varchar(500) NOT NULL,
  dose_unit varchar(64),
  route varchar(255),
  preparation_status varchar(32) NOT NULL DEFAULT 'pending'
    CHECK (preparation_status IN ('pending','in_preparation','ready','released','cancelled')),
  administration_status varchar(32) NOT NULL DEFAULT 'not_started'
    CHECK (administration_status IN ('not_started','in_progress','completed','withheld','cancelled')),
  notes text,
  revision bigint NOT NULL DEFAULT 1 CHECK (revision > 0),
  created_by bigint NOT NULL REFERENCES local_users(id),
  updated_by bigint NOT NULL REFERENCES local_users(id),
  created_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  updated_at timestamptz NOT NULL DEFAULT clock_timestamp()
);

CREATE TABLE treatment_cycle_logistics (
  patient_id bigint NOT NULL REFERENCES patients(source_id) ON DELETE RESTRICT,
  treatment_id varchar(255) NOT NULL REFERENCES clinical_treatments(id) ON DELETE RESTRICT,
  cycle_number smallint NOT NULL CHECK (cycle_number BETWEEN 1 AND 500),
  planned_date date,
  medication_state varchar(32) NOT NULL DEFAULT 'pending'
    CHECK (medication_state IN ('pending','received','with_patient')),
  prescription_state varchar(32)
    CHECK (prescription_state IN ('confirmed','required','requested','rejected')),
  notes varchar(2000),
  revision bigint NOT NULL DEFAULT 1 CHECK (revision > 0),
  updated_by bigint NOT NULL REFERENCES local_users(id),
  created_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  updated_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  PRIMARY KEY (patient_id, treatment_id, cycle_number)
);

CREATE TABLE clinical_configuration_items (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  item_kind varchar(64) NOT NULL,
  item_key varchar(128) NOT NULL,
  display_name varchar(500) NOT NULL,
  description text,
  active boolean NOT NULL DEFAULT true,
  definition_json jsonb NOT NULL,
  revision bigint NOT NULL DEFAULT 1 CHECK (revision > 0),
  created_by bigint NOT NULL REFERENCES local_users(id),
  updated_by bigint NOT NULL REFERENCES local_users(id),
  created_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  updated_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  CONSTRAINT uq_clinical_configuration_kind_key UNIQUE (item_kind, item_key)
);
CREATE INDEX idx_clinical_configuration_kind_active
  ON clinical_configuration_items (item_kind, active, lower(display_name));

CREATE TABLE clinical_configuration_versions (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  configuration_item_id bigint NOT NULL REFERENCES clinical_configuration_items(id) ON DELETE CASCADE,
  revision bigint NOT NULL CHECK (revision > 0),
  display_name varchar(500) NOT NULL,
  description text,
  active boolean NOT NULL,
  definition_json jsonb NOT NULL,
  changed_by bigint NOT NULL REFERENCES local_users(id),
  created_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  CONSTRAINT uq_clinical_configuration_version UNIQUE (configuration_item_id, revision)
);

CREATE TABLE treatment_management_states (
  patient_id bigint NOT NULL REFERENCES patients(source_id) ON DELETE RESTRICT,
  treatment_id varchar(255) NOT NULL REFERENCES clinical_treatments(id) ON DELETE RESTRICT,
  continuity_status varchar(32) NOT NULL DEFAULT 'active'
    CHECK (continuity_status IN ('active','temporary_hold','discontinued')),
  effective_from_cycle smallint CHECK (effective_from_cycle BETWEEN 1 AND 500),
  suspension_reason varchar(2000),
  resume_date date,
  prescription_required boolean NOT NULL DEFAULT false,
  revision bigint NOT NULL DEFAULT 1 CHECK (revision > 0),
  updated_by bigint NOT NULL REFERENCES local_users(id),
  created_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  updated_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  PRIMARY KEY (patient_id, treatment_id)
);

CREATE TABLE treatment_workflow_requests (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  request_type varchar(32) NOT NULL CHECK (request_type IN ('prescription_request','continuity_request')),
  status varchar(16) NOT NULL DEFAULT 'pending' CHECK (status IN ('pending','resolved','cancelled')),
  patient_id bigint NOT NULL REFERENCES patients(source_id) ON DELETE RESTRICT,
  treatment_id varchar(255) NOT NULL REFERENCES clinical_treatments(id) ON DELETE RESTRICT,
  cycle_number smallint NOT NULL CHECK (cycle_number BETWEEN 1 AND 500),
  requested_by_user_id bigint NOT NULL REFERENCES local_users(id),
  assigned_to_user_id bigint NOT NULL REFERENCES local_users(id),
  message varchar(3000),
  context_json jsonb NOT NULL,
  resolution varchar(32)
    CHECK (resolution IN ('prescription_confirmed','prescription_rejected','continue','temporary_hold','discontinued')),
  resolution_reason varchar(3000),
  resume_date date,
  seen_at timestamptz,
  resolved_at timestamptz,
  resolved_by_user_id bigint REFERENCES local_users(id),
  created_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  updated_at timestamptz NOT NULL DEFAULT clock_timestamp()
);
CREATE INDEX idx_treatment_workflow_inbox
  ON treatment_workflow_requests (assigned_to_user_id, status, created_at DESC);
CREATE UNIQUE INDEX uq_treatment_workflow_pending
  ON treatment_workflow_requests (patient_id, treatment_id, cycle_number, request_type)
  WHERE status = 'pending';

CREATE TABLE clinical_workflow_events (
  id uuid PRIMARY KEY,
  workflow_request_id bigint REFERENCES treatment_workflow_requests(id) ON DELETE SET NULL,
  patient_id bigint NOT NULL REFERENCES patients(source_id) ON DELETE RESTRICT,
  treatment_id varchar(255) NOT NULL REFERENCES clinical_treatments(id) ON DELETE RESTRICT,
  cycle_number smallint CHECK (cycle_number BETWEEN 1 AND 500),
  event_type varchar(96) NOT NULL,
  actor_user_id bigint NOT NULL REFERENCES local_users(id),
  event_json jsonb NOT NULL,
  created_at timestamptz NOT NULL DEFAULT clock_timestamp()
);

CREATE TABLE unified_clinical_audit (
  id bigint GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  actor_user_id bigint REFERENCES local_users(id) ON DELETE SET NULL,
  patient_id bigint REFERENCES patients(source_id) ON DELETE SET NULL,
  entity_type varchar(96) NOT NULL,
  entity_id varchar(255) NOT NULL,
  action varchar(96) NOT NULL,
  before_json jsonb,
  after_json jsonb,
  reason varchar(1000),
  request_id varchar(128),
  created_at timestamptz NOT NULL DEFAULT clock_timestamp()
);
CREATE INDEX idx_unified_audit_patient ON unified_clinical_audit (patient_id, created_at DESC);
CREATE INDEX idx_unified_audit_entity ON unified_clinical_audit (entity_type, entity_id, created_at DESC);

CREATE TABLE clinical_files (
  id uuid PRIMARY KEY,
  patient_id bigint REFERENCES patients(source_id) ON DELETE CASCADE,
  treatment_id varchar(255) REFERENCES clinical_treatments(id) ON DELETE CASCADE,
  file_kind varchar(64) NOT NULL,
  original_filename varchar(500) NOT NULL,
  storage_key varchar(1000) NOT NULL UNIQUE,
  content_type varchar(255) NOT NULL,
  byte_size bigint NOT NULL CHECK (byte_size > 0),
  sha256 char(64) NOT NULL,
  metadata jsonb NOT NULL DEFAULT '{}'::jsonb,
  created_by bigint NOT NULL REFERENCES local_users(id),
  created_at timestamptz NOT NULL DEFAULT clock_timestamp()
);
CREATE INDEX idx_clinical_files_patient ON clinical_files (patient_id, file_kind, created_at DESC);

CREATE TABLE scheme_duration_estimates (
  scheme_id varchar(255) PRIMARY KEY,
  scheme_name varchar(500) NOT NULL,
  duration_minutes smallint NOT NULL CHECK (duration_minutes BETWEEN 1 AND 1440),
  source_type varchar(32) NOT NULL CHECK (source_type IN ('coir_catalog','protocol_components','manual')),
  match_method varchar(96) NOT NULL,
  confidence numeric(4,3) NOT NULL CHECK (confidence BETWEEN 0 AND 1),
  source_scheme_id varchar(255),
  source_scheme_name varchar(500),
  source_duration_minutes smallint,
  component_duration_minutes smallint,
  notes varchar(1000),
  revision bigint NOT NULL DEFAULT 1 CHECK (revision > 0),
  updated_by bigint REFERENCES local_users(id) ON DELETE SET NULL,
  created_at timestamptz NOT NULL DEFAULT clock_timestamp(),
  updated_at timestamptz NOT NULL DEFAULT clock_timestamp()
);

CREATE TABLE system_settings (
  setting_key varchar(128) PRIMARY KEY,
  setting_value jsonb NOT NULL,
  secret_value bytea,
  revision bigint NOT NULL DEFAULT 1 CHECK (revision > 0),
  updated_by bigint REFERENCES local_users(id) ON DELETE SET NULL,
  updated_at timestamptz NOT NULL DEFAULT clock_timestamp()
);
